tests/negative/semantic/import_depth_limit/d33.ci
int deep() { return 33; }
